--- a/GalleryAppMvvm/app/src/main/res/layout/custom_dialog.xml
+++ b/GalleryAppMvvm/app/src/main/res/layout/custom_dialog.xml
@@ -4,21 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="@dimen/login_padding_45dp"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorPrimary"
+    android:padding="@dimen/login_padding_45dp">
 
 
     <TextView
-        android:textColor="@android:color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:id="@+id/loadingHeading"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="@string/loading"
+        android:textColor="@android:color/white"
         android:textSize="@dimen/button_text_size_21sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteY="24dp" />
 
     <ProgressBar
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_20dp"
-        app:layout_constraintStart_toStartOf="@id/loadingHeading"
         app:layout_constraintEnd_toEndOf="@id/loadingHeading"
+        app:layout_constraintStart_toStartOf="@id/loadingHeading"
         app:layout_constraintTop_toBottomOf="@id/loadingHeading" />
 </androidx.constraintlayout.widget.ConstraintLayout>
