--- a/GalleryAppMvvm/app/src/main/res/layout/userprofile_fragment_layout.xml
+++ b/GalleryAppMvvm/app/src/main/res/layout/userprofile_fragment_layout.xml
@@ -36,10 +36,10 @@
         android:id="@+id/edit_profile_image_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
         android:layout_marginEnd="@dimen/margin_10dp"
         android:layout_marginBottom="@dimen/margin_10dp"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintBottom_toBottomOf="@id/image_view_userprofile"
         app:layout_constraintEnd_toEndOf="@id/image_view_userprofile"
         app:srcCompat="@android:drawable/ic_menu_edit" />
@@ -47,7 +47,7 @@
     <TextView
 
         android:id="@+id/text_username"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_40dp"
         android:drawableStart="@drawable/ic_sentiment_very_satisfied_black_24dp"
@@ -56,11 +56,13 @@
         android:textColor="@android:color/white"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/image_view_userprofile" />
 
     <TextView
         android:id="@+id/text_email"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_40dp"
         android:drawableStart="@drawable/ic_email_black_24dp"
@@ -69,6 +71,8 @@
         android:textColor="@android:color/white"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_username" />
 
     <Button
