--- a/GalleryAppMvvm/app/src/main/res/layout/login_fragment_layout.xml
+++ b/GalleryAppMvvm/app/src/main/res/layout/login_fragment_layout.xml
@@ -19,17 +19,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:inputType="textEmailAddress"
         android:id="@+id/email_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_20dp"
         android:layout_marginEnd="@dimen/margin_20dp"
+        android:background="@drawable/edit_text_background"
         android:drawableStart="@drawable/ic_email_black_24dp"
         android:drawablePadding="@dimen/edit_text_drwable_padding_10dp"
         android:hint="@string/email_hint"
+        android:inputType="textEmailAddress"
         android:maxLines="1"
-        android:text="ash@ash.com"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
         android:textSize="@dimen/edit_text_font_24sp"
@@ -44,12 +44,12 @@
         android:layout_marginStart="@dimen/margin_20dp"
         android:layout_marginTop="@dimen/margin_20dp"
         android:layout_marginEnd="@dimen/margin_20dp"
+        android:background="@drawable/edit_text_background"
         android:drawableStart="@drawable/ic_vpn_key_black_24dp"
         android:drawablePadding="@dimen/margin_10dp"
         android:hint="@string/password_hint"
         android:inputType="textPassword"
         android:maxLines="1"
-        android:text="12345678"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
         android:textSize="@dimen/edit_text_font_24sp"
